Bevel tools fails in many cases #37618

Closed
opened 2013-11-25 22:00:39 +01:00 by Voyager Voyager · 10 comments

System Information
Windows 7, 64bit, GeForce GT 555M

Blender Version
Broken: Blender 2.69 r60995 and newer

Short description of error
Bevel fails in many cases.

Exact steps for others to reproduce the error
Just compare current results in the middle with desired results to the right. Object on the left is untouched model.more_bevel_bugs.blend

**System Information** Windows 7, 64bit, GeForce GT 555M **Blender Version** Broken: Blender 2.69 r60995 and newer **Short description of error** Bevel fails in many cases. **Exact steps for others to reproduce the error** Just compare current results in the middle with desired results to the right. Object on the left is untouched model.[more_bevel_bugs.blend](https://archive.blender.org/developer/F32967/more_bevel_bugs.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Howard Trickey was assigned by Voyager Voyager 2013-11-25 22:00:39 +01:00

Added subscriber: @voyagercgi

Added subscriber: @voyagercgi
Member

Thanks for the report. It is similar to another couple assigned to me right now. I am working on another bevel bug at the moment but will get to this eventually.

Thanks for the report. It is similar to another couple assigned to me right now. I am working on another bevel bug at the moment but will get to this eventually.

Added subscribers: @howardt, @Sergey

Added subscribers: @howardt, @Sergey

@howardt, what's the status here?

@howardt, what's the status here?
Member

These are not so much bugs as cases where user desires tool to make different choices. I agree that the choices he wants would look better in the cases in the test example.
This one got a little better with the last big batch of bevel changes, but still does not do what the user wants.
Two problems to fix:

  1. need to see why offset propagation logic fails to use the same offset for similar looking vertex configurations
  2. add special case code to make the "meet plane" for welded edge case with two unbeveled edges passing through them be in the same plane as those two edges. This would need testing to make sure it is the desired output for a wide range of similar configurations.
These are not so much bugs as cases where user desires tool to make different choices. I agree that the choices he wants would look better in the cases in the test example. This one got a little better with the last big batch of bevel changes, but still does not do what the user wants. Two problems to fix: 1) need to see why offset propagation logic fails to use the same offset for similar looking vertex configurations 2) add special case code to make the "meet plane" for welded edge case with two unbeveled edges passing through them be in the same plane as those two edges. This would need testing to make sure it is the desired output for a wide range of similar configurations.
Member

These are not so much bugs as cases where user desires tool to make different choices. I agree that the choices he wants would look better in the cases in the test example.
This one got a little better with the last big batch of bevel changes, but still does not do what the user wants.
Two problems to fix:

  1. need to see why offset propagation logic fails to use the same offset for similar looking vertex configurations
  2. add special case code to make the "meet plane" for welded edge case with two unbeveled edges passing through them be in the same plane as those two edges. This would need testing to make sure it is the desired output for a wide range of similar configurations.
These are not so much bugs as cases where user desires tool to make different choices. I agree that the choices he wants would look better in the cases in the test example. This one got a little better with the last big batch of bevel changes, but still does not do what the user wants. Two problems to fix: 1) need to see why offset propagation logic fails to use the same offset for similar looking vertex configurations 2) add special case code to make the "meet plane" for welded edge case with two unbeveled edges passing through them be in the same plane as those two edges. This would need testing to make sure it is the desired output for a wide range of similar configurations.

This issue was referenced by d504b325fb

This issue was referenced by d504b325fbb287d004f2fbb6b29442be2ea460d0
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit d504b325fb.

Closed by commit d504b325fb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37618
No description provided.